--- a/HungryProject/src/main/resources/templates/home.html
+++ b/HungryProject/src/main/resources/templates/home.html
@@ -13,6 +13,7 @@
         <h4>We are your humble servers.</h4>
         <h6>Halt your Hunger by ordering here.</h6>
         <h3><a th:href="@{/register}">Register</a></h3>
+        <h3><a th:href="@{/login}">Login</a></h3>
     </div>
      
 </body>
