--- a/HungryProject/src/main/resources/templates/loggedIn.html
+++ b/HungryProject/src/main/resources/templates/loggedIn.html
@@ -12,6 +12,7 @@
         <h1>HUNGRY</h1>
         <h4>You have logged in successfully...!</h4>
         <h4>Enjoy our favourite food by ordering here.</h4>
+        <h3><a th:href="@{/}">Logout</a></h3>
     </div>
      
 </body>
